--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,20 @@
 .App{
     width: 100%;
 }
+.iconScrollToTop{
+    position: fixed;
+    right: 30px;
+    bottom: 50px;
+    width: 40px;
+    height: 40px;
+}
+.iconScrollToTop .arrow-up-icon{
+    width: 40px;
+    height: 40px;
+    opacity: 50%;
+    color: rgb(14, 70, 107);
+    cursor: pointer;
+}
+.iconScrollToTop .arrow-up-icon:hover{
+    color: rgb(7, 46, 71);
+}
