--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -3,8 +3,7 @@
     padding: 0;
     width: 100%;
     height: 70px;
-    background-color: #c1c9dbce;
-    border-bottom: 1px solid rgb(77, 77, 77);
+    background-color: #edeee8;
     position: fixed;
     z-index: 200;
 }
@@ -76,7 +75,17 @@
 /* .search-item .icon-list .bag{
     position: relative;
 } */
-
+.icon-item.cart{
+    position: relative;
+}
+span.amount-product {
+    position: absolute;
+    top: -2px;
+    left: 18px;
+    font-size: 12px;
+    color: #d04b18;
+    font-weight: bold;
+}
 /* DROPDOWN */
 .icon-menu .btn-group-dropdown .items-menu-box{
     background-color: #c1c9dbce;
